# tantivy-derive

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  linux.yml  windows.yml
tantivy-derive/: Cargo.toml
tantivy-derive-impl/: Cargo.toml
tantivy-derive-impl/src/: lib.rs
tantivy-derive/examples/: basic_search.rs
tantivy-derive/src/: lib.rs  options.rs
