[workspace]
members = ["tantivy-derive", "tantivy-derive-impl"]
resolver = "1"

[workspace.dependencies]
bytes = "1"
chrono = "0.4"
darling = "0.20"
jiff = "0.2"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
serde = "1"
syn = { version = "2", features = ["extra-traits"] }
tantivy = "0.24"
tempfile = "3"
url = "2"
uuid = "1"
