[package]
name = "tantivy-derive-impl"
version = "0.1.0"
edition = "2021"
description = "Macro implementation of tantivy-derive"
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/tantivy-derive-impl"
repository = "https://github.com/StephanvanSchaik/tantivy-derive"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
tantivy = "0.22"
