[package]
name = "tantivy-derive"
version = "0.1.0"
edition = "2024"
description = "Generate code to converts struct from and to tantivy documents"
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/tantivy-derive"
repository = "https://github.com/StephanvanSchaik/tantivy-derive"

[dependencies]
bytes = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tantivy.workspace = true
tantivy-derive-impl = "0.1"
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
bytes = ["dep:bytes"]
chrono = ["dep:chrono"]
default = ["bytes", "chrono", "decimal", "jiff", "serde", "url", "uuid"]
decimal = ["rust_decimal"]
jiff = ["dep:jiff"]
serde = ["dep:serde"]
url = ["dep:url"]
uuid = ["dep:uuid"]
